<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/switchc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/fullflow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_flow"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchc">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sc1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scenario_1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sc1_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t1" />

            <Button
                android:id="@+id/sc1_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t2" />

            <Button
                android:id="@+id/sc1_t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t3" />

            <Button
                android:id="@+id/sc1_t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t4" />

            <Button
                android:id="@+id/sc1_t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sc2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scenario_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sc2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t1" />

            <Button
                android:id="@+id/sc2_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t2" />

            <Button
                android:id="@+id/sc2_t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t3" />

            <Button
                android:id="@+id/sc2_t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t4" />

            <Button
                android:id="@+id/sc2_t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sc3_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scenario_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sc3_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t1" />

            <Button
                android:id="@+id/sc3_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t2" />

            <Button
                android:id="@+id/sc3_t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t3" />

            <Button
                android:id="@+id/sc3_t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t4" />

            <Button
                android:id="@+id/sc3_t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sc1_t5" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>